cursive-bootstrap/tests/ui/E-CON/E-CON-0034.cursive
// RUN: compile-fail
// DIAG: E-CON-0034
// SPEC: 8.9
// DESC: Key path root not derivable from lexical context

record Data {
    value: i32
}

procedure non_derivable() -> () {
    # write compute_path() {  //~ ERROR E-CON-0034: key path root not derivable
        let x: i32 = 0
    }
}

procedure compute_path() -> shared Data {
    return Data { value: 0 }
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
